# prediction-market-data-services

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  render.yaml
.claude/agents/: architecture-planner.md  code-improvement-scanner.md  project-orchestrator.md
docs/: parquet-backtest-plan.md
migrations/: 001_initial_schema.sql  002_add_foreign_keys.sql  003_add_platform_column.sql  004_fix_markets_unique_constraint.sql
notebooks/: 15m_markets_analysis.ipynb
scripts/: compare_polymarket_kalshi.py  convert_pem_for_env.py  seed_btc_15m_listener.py  seed_crypto_listener.py  seed_kalshi_listener.py  seed_listener.py  setup_local_db.py  test_complete_flow.py  test_full_service.py  test_kalshi_live.py  test_live_nba.py  test_orderbook_flow.py  test_websocket_active.py  test_websocket_events.py
scripts/examples/: run_backtest.py  run_signal_backtest.py
src/: config.py  main.py
src/backtest/: __init__.py
src/backtest/core/: __init__.py  backtest_engine.py  interfaces.py  strategy.py
src/backtest/models/: __init__.py  config.py  market_pair.py  order.py  portfolio.py  position.py
src/backtest/services/: __init__.py  data_loader.py  execution_engine.py  metrics.py  queue_simulator.py  (+1 more)
src/core/: __init__.py  events.py  interfaces.py  listener.py  listener_factory.py  listener_manager.py
src/models/: __init__.py  kalshi_filters.py  listener.py  market.py  orderbook.py  trade.py
src/services/: __init__.py  config_loader.py  kalshi_auth.py  kalshi_discovery.py  kalshi_websocket_client.py  market_discovery.py  polymarket_websocket_client.py  postgres_writer.py  state_forward_filler.py  supabase_writer.py  websocket_client.py
src/utils/: logger.py
tests/: test_config.py  test_listener.py  test_listener_manager.py  test_market_discovery.py  test_models.py  test_postgres.py  test_supabase.py  test_websocket_client.py
tests/backtest/: conftest.py  test_config_models.py  test_execution_engine.py  test_integration.py  test_market_pair.py  test_metrics.py  test_order_models.py  test_orderbook_signals.py  test_portfolio.py  test_position_models.py  test_queue_simulator.py  test_strategy.py
(+5 files in other folders)
