[project]
name = "prediction-market-data-services"
version = "0.1.0"
description = "Real-time orderbook data collection from Polymarket"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.9.0",
    "websockets>=12.0",
    "supabase>=2.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "structlog>=24.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
]
local = [
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.0",
]
viz = [
    "plotly>=5.18.0",
    "pandas>=2.0.0",
    "jupyter>=1.0.0",
    "nbconvert>=7.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
