[project]
name = "prediction-market-data-services"
version = "0.1.0"
description = "Real-time orderbook data collection from Polymarket and Kalshi"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.9.0",
    "websockets>=12.0",
    "supabase>=2.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "structlog>=24.0.0",
    "cryptography>=41.0.0",  # For Kalshi RSA-PSS authentication
    "certifi>=2023.0.0",     # SSL certificates
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
]
local = [
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.0",
]
viz = [
    "plotly>=5.18.0",
    "pandas>=2.0.0",
    "jupyter>=1.0.0",
    "nbconvert>=7.0.0",
]
backtest = [
    "asyncpg>=0.29.0",
    "numpy>=1.26.0",
    "matplotlib>=3.8.0",
    "scipy>=1.11.0",
    "tqdm>=4.66.0",  # Progress bars for backtest runs
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: end-to-end integration tests for the backtest pipeline",
]
